fixed the wrong font size of experience section

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,7 +198,7 @@ p {
   overflow: hidden;
   margin-bottom: 2px;
 }
-.main-wrapper .job-title {
+.main-wrapper .volunteer-event {
   color: #3F4650;
   font-size: 16px;
   margin-top: 0;
@@ -211,7 +211,7 @@ p {
   top: 0;
   color: #97AAC3;
 }
-.main-wrapper .company {
+.main-wrapper .volunteer-title {
   margin-bottom: 10px;
   color: #97AAC3;
 }
